--- a/page2.html
+++ b/page2.html
@@ -61,17 +61,6 @@
       box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5); /* White fading inside the chips */
     }
 
-    .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
-    .chocolate-chip:nth-child(2) { width: 22px; height: 22px; top: 50%; left: 60%; }
-    .chocolate-chip:nth-child(3) { width: 28px; height: 28px; top: 75%; left: 45%; }
-    .chocolate-chip:nth-child(4) { width: 20px; height: 20px; top: 60%; left: 15%; }
-    .chocolate-chip:nth-child(5) { width: 24px; height: 24px; top: 15%; left: 70%; }
-    .chocolate-chip:nth-child(6) { width: 25px; height: 25px; top: 40%; left: 30%; }
-    .chocolate-chip:nth-child(7) { width: 18px; height: 18px; top: 65%; left: 75%; }
-    .chocolate-chip:nth-child(8) { width: 26px; height: 26px; top: 35%; left: 55%; }
-    .chocolate-chip:nth-child(9) { width: 20px; height: 20px; top: 85%; left: 25%; }
-    .chocolate-chip:nth-child(10) { width: 15px; height: 15px; top: 25%; left: 50%; }
-
     .dim-background {
       position: absolute;
       top: 0;
@@ -170,123 +159,58 @@
 
   <div class="game-container">
     <div class="click-circle" onclick="incrementScore()">
-      <!-- Chocolate chips -->
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
     </div>
-  </div>
-
-  <!-- Shop GUI -->
-  <div class="gui" id="storeGUI">
-    <h2>Store</h2>
-    <p>Buy upgrades and items here!</p>
-    <div class="upgrade-line">
-      <div>
-        <p>clicks</p>
-        <p>plus one cookie per click</p>
-      </div>
-      <button class="upgrade-button">10 🍪</button>
-    </div>
-  </div>
-
-  <!-- Other GUIs -->
-  <div class="gui" id="specialGUI">
-    <h2>Special</h2>
-    <p>Special events and items.</p>
-  </div>
-  <div class="gui" id="statsGUI">
-    <h2>Stats</h2>
-    <p>Check your progress here.</p>
-  </div>
-  <div class="gui" id="miscGUI">
-    <h2>Misc</h2>
-    <p>Extra settings and options.</p>
   </div>
 
   <footer>
     <button class="footer-button" onclick="toggleGUI('storeGUI')">Store</button>
-    <button class="footer-button" onclick="toggleGUI('specialGUI')">Special</button>
-    <button class="footer-button" onclick="toggleGUI('statsGUI')">Stats</button>
-    <button class="footer-button" onclick="toggleGUI('miscGUI')">Misc</button>
   </footer>
 
   <script>
+    let score = 0;
+
     async function openDatabase() {
       const request = indexedDB.open('cookieClickerDB', 1);
       return new Promise((resolve, reject) => {
-        request.onerror = () => reject(request.error);
         request.onsuccess = () => resolve(request.result);
+        request.onerror = () => reject(request.error);
         request.onupgradeneeded = (event) => {
           const db = event.target.result;
-          if (!db.objectStoreNames.contains('scores')) {
-            db.createObjectStore('scores', { keyPath: 'id' });
-          }
+          db.createObjectStore('scores', { keyPath: 'id' });
         };
       });
     }
 
     async function getScore() {
       const db = await openDatabase();
-      const transaction = db.transaction('scores', 'readonly');
-      const store = transaction.objectStore('scores');
+      const tx = db.transaction('scores', 'readonly');
+      const store = tx.objectStore('scores');
       const request = store.get(1);
       return new Promise((resolve) => {
-        request.onsuccess = () => resolve(request.result ? request.result.value : 0);
+        request.onsuccess = () => resolve(request.result?.value || 0);
       });
     }
 
-    async function updateScore(value) {
+    async function saveScore(newScore) {
       const db = await openDatabase();
-      const transaction = db.transaction('scores', 'readwrite');
-      const store = transaction.objectStore('scores');
-      store.put({ id: 1, value });
+      const tx = db.transaction('scores', 'readwrite');
+      const store = tx.objectStore('scores');
+      store.put({ id: 1, value: newScore });
     }
 
     async function incrementScore() {
       score += 1;
       document.getElementById('score').textContent = score;
-      await updateScore(score);
-
-      const circle = document.querySelector('.click-circle');
-      circle.style.transform = 'scale(1.1)';
-      setTimeout(() => circle.style.transform = 'scale(1)', 100);
+      await saveScore(score);
     }
 
-    async function decrementScore() {
-      if (score >= 10) {
-        score -= 10;
-        document.getElementById('score').textContent = score;
-        await updateScore(score);
-      }
+    async function initialize() {
+      score = await getScore();
+      document.getElementById('score').textContent = score;
     }
 
-    // Add event listener to the "10 🍪" button
-    document.querySelector('.upgrade-button').addEventListener('click', decrementScore);
-
-    function toggleGUI(guiId) {
-      const gui = document.getElementById(guiId);
-      const dimBackground = document.getElementById('dimBackground');
-      const isVisible = gui.style.display === 'block';
-
-      document.querySelectorAll('.gui').forEach(gui => gui.style.display = 'none');
-      dimBackground.style.display = 'none';
-
-      if (!isVisible) {
-        gui.style.display = 'block';
-        dimBackground.style.display = 'block';
-      }
-    }
-
-    let score = 0;
-    initialize();
+    window.onload = initialize;
   </script>
 </body>
 </html>
