--- a/page2.html
+++ b/page2.html
@@ -110,6 +110,15 @@
       justify-content: space-between;
     }
 
+    .upgrade-line p {
+      margin: 0;
+    }
+
+    .upgrade-line p:first-child {
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+
     .upgrade-button {
       padding: 5px 15px;
       background-color: #00509E;
@@ -173,20 +182,25 @@
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
     </div>
+
+    <button class="upgrade-button" onclick="add10Cookies()">10 🍪</button>
+    <span id="addedCookies">0</span> cookies
   </div>
 
-  <!-- GUIs -->
+  <!-- Shop GUI -->
   <div class="gui" id="storeGUI">
     <h2>Store</h2>
     <p>Buy upgrades and items here!</p>
     <div class="upgrade-line">
       <div>
-        <p>Click Upgrade</p>
-        <p>Increase clicks by 1</p>
+        <p>clicks</p>
+        <p>plus one cookie per click</p>
       </div>
-      <button class="upgrade-button" onclick="buyUpgrade()">10 🍪</button>
+      <button class="upgrade-button">10 🍪</button>
     </div>
   </div>
+
+  <!-- Other GUIs -->
   <div class="gui" id="specialGUI">
     <h2>Special</h2>
     <p>Special events and items.</p>
@@ -208,21 +222,74 @@
   </footer>
 
   <script>
-    let score = 0;
-
     async function openDatabase() {
       const request = indexedDB.open('cookieClickerDB', 1);
       return new Promise((resolve, reject) => {
-        request.onsuccess = () => resolve(request.result);
         request.onerror = () => reject(request.error);
+        request.onsuccess = () => resolve(request.result);
         request.onupgradeneeded = (event) => {
           const db = event.target.result;
-          db.createObjectStore('scores', { keyPath: 'id' });
+          if (!db.objectStoreNames.contains('scores')) {
+            db.createObjectStore('scores', { keyPath: 'id' });
+          }
         };
       });
     }
 
     async function getScore() {
       const db = await openDatabase();
-      const tx = db.transaction('scores', 'readonly');
-      const store = tx.objectStore('scores');
+      const transaction = db.transaction('scores', 'readonly');
+      const store = transaction.objectStore('scores');
+      const request = store.get(1);
+      return new Promise((resolve) => {
+        request.onsuccess = () => resolve(request.result ? request.result.value : 0);
+      });
+    }
+
+    async function updateScore(value) {
+      const db = await openDatabase();
+      const transaction = db.transaction('scores', 'readwrite');
+      const store = transaction.objectStore('scores');
+      store.put({ id: 1, value });
+    }
+
+    async function incrementScore() {
+      score++;
+      document.getElementById('score').textContent = score;
+      await updateScore(score);
+
+      const circle = document.querySelector('.click-circle');
+      circle.style.transform = 'scale(1.1)';
+      setTimeout(() => circle.style.transform = 'scale(1)', 100);
+    }
+
+    function add10Cookies() {
+      const addedCookies = parseInt(document.getElementById('addedCookies').textContent) || 0;
+      document.getElementById('addedCookies').textContent = addedCookies + 10;
+      incrementScore(10); // Increment score by 10
+    }
+
+    async function initialize() {
+      score = await getScore();
+      document.getElementById('score').textContent = score;
+    }
+
+    function toggleGUI(guiId) {
+      const gui = document.getElementById(guiId);
+      const dimBackground = document.getElementById('dimBackground');
+      const isVisible = gui.style.display === 'block';
+
+      document.querySelectorAll('.gui').forEach(gui => gui.style.display = 'none');
+      dimBackground.style.display = 'none';
+
+      if (!isVisible) {
+        gui.style.display = 'block';
+        dimBackground.style.display = 'block';
+      }
+    }
+
+    let score = 0;
+    initialize();
+  </script>
+</body>
+</html>
