--- a/page2.html
+++ b/page2.html
@@ -1,170 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cookie Clicker</title>
-    <style>
-        /* General Styling */
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f7f7f7;
-            margin: 0;
-            padding: 0;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cookie Clicker Game</title>
+  <style>
+    body {
+      background-image: linear-gradient(to bottom, #00509E, #001F54);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      height: 100vh;
+      font-family: Arial, sans-serif;
+      color: white;
+      overflow: hidden;
+    }
 
-        #gameContainer {
-            margin: 50px auto;
-            padding: 20px;
-            max-width: 400px;
-            border: 2px solid #ccc;
-            border-radius: 10px;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
+    .counter-box {
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      text-align: center;
+      padding: 10px;
+      font-size: 1.5em;
+      font-weight: bold;
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+    }
 
-        /* Button Styles */
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
+    .game-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      flex-grow: 1;
+    }
 
-        #clickButton {
-            background-color: #4caf50; /* Green */
-            color: white;
-        }
+    .click-circle {
+      width: 300px;
+      height: 300px;
+      background-color: #8B4513;
+      border-radius: 50%;
+      position: relative;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+      cursor: pointer;
+      transition: transform 0.1s ease-in-out;
+      outline: none;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
+    }
 
-        #clickButton:hover {
-            background-color: #45a049;
-        }
+    .chocolate-chip {
+      position: absolute;
+      background-color: #3E2723;
+      border-radius: 50%;
+      pointer-events: none;
+      box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5);
+    }
 
-        /* Misc GUI Styling */
-        .miscGUI {
-            margin-top: 20px;
-        }
+    .dim-background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0);
+      display: none;
+      z-index: 9;
+      pointer-events: none;
+    }
 
-        .miscGUI button {
-            padding: 10px 20px;
-            font-size: 16px;
-            color: white;
-            background-color: #ff4444; /* Red for reset */
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
+    .gui {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 80%;
+      height: 60%;
+      background-color: rgba(255, 255, 255, 0.9);
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+      display: none;
+      z-index: 20;
+      border-radius: 10px;
+      padding: 20px;
+      text-align: center;
+      color: black;
+    }
 
-        .miscGUI button:hover {
-            background-color: #cc0000; /* Darker red on hover */
-        }
-    </style>
+    footer {
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 10px 0;
+      box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.5);
+      position: absolute;
+      bottom: 0;
+    }
+
+    .footer-button {
+      color: white;
+      background: transparent;
+      border: none;
+      font-size: 1em;
+      font-weight: bold;
+      cursor: pointer;
+      text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8);
+    }
+
+    .footer-button:hover {
+      text-decoration: underline;
+    }
+
+    .reset-button {
+      padding: 10px 20px;
+      background-color: #ff4444;
+      color: white;
+      border: none;
+      font-size: 1em;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .reset-button:hover {
+      background-color: #cc0000;
+    }
+  </style>
 </head>
 <body>
-    <div id="gameContainer">
-        <h1>Cookie Clicker</h1>
-        <p>Score: <span id="scoreDisplay">0</span></p>
-        <button id="clickButton">Click Me!</button>
+
+  <div class="dim-background" id="dimBackground"></div>
+
+  <div class="counter-box">
+    <span id="score">0</span> cookies
+  </div>
+
+  <div class="game-container">
+    <div class="click-circle" onclick="incrementScore()">
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
     </div>
-    <div class="miscGUI">
-        <button onclick="resetProgress()">Reset Progress</button>
-    </div>
+  </div>
 
-    <script>
-        // Variables
-        let score = 0;
-        let clickBonus = 1;
+  <div class="gui" id="storeGUI">
+    <h2>Store</h2>
+    <p>Buy upgrades here!</p>
+  </div>
 
-        // Function to update score display
-        function updateScoreDisplay() {
-            const scoreDisplay = document.getElementById("scoreDisplay");
-            scoreDisplay.textContent = score;
-        }
+  <div class="gui" id="upgradesGUI">
+    <h2>Upgrades</h2>
+    <p>Upgrade details here!</p>
+  </div>
 
-        // Function to handle button clicks
-        document.getElementById("clickButton").addEventListener("click", function () {
-            score += clickBonus;
-            updateScoreDisplay();
-            saveProgress(); // Save the score after every click
-        });
+  <div class="gui" id="miscGUI">
+    <h2>Misc</h2>
+    <p>Additional settings and options.</p>
+    <button class="reset-button" onclick="resetProgress()">Reset Progress</button>
+  </div>
 
-        // IndexedDB Setup
-        const dbRequest = indexedDB.open("cookieClickerDB", 1);
+  <footer>
+    <button class="footer-button" onclick="toggleGUI('storeGUI')">Store</button>
+    <button class="footer-button" onclick="toggleGUI('upgradesGUI')">Upgrades</button>
+    <button class="footer-button" onclick="toggleGUI('miscGUI')">Misc</button>
+  </footer>
 
-        dbRequest.onupgradeneeded = function (event) {
-            const db = event.target.result;
-            db.createObjectStore("scores", { keyPath: "id" });
+  <script>
+    let score = 0;
+    let clickBonus = 0;
+
+    async function openDatabase() {
+      const request = indexedDB.open('cookieClickerDB', 1);
+      return new Promise((resolve, reject) => {
+        request.onerror = () => reject(request.error);
+        request.onsuccess = () => resolve(request.result);
+        request.onupgradeneeded = (event) => {
+          const db = event.target.result;
+          if (!db.objectStoreNames.contains('scores')) {
+            db.createObjectStore('scores', { keyPath: 'id' });
+          }
         };
+      });
+    }
 
-        dbRequest.onsuccess = function (event) {
-            const db = event.target.result;
+    async function resetProgress() {
+      const db = await openDatabase();
+      const transaction = db.transaction('scores', 'readwrite');
+      const store = transaction.objectStore('scores');
+      store.clear();
+      score = 0;
+      clickBonus = 0;
+      document.getElementById('score').textContent = score;
+      alert('Progress has been reset!');
+    }
 
-            // Load saved progress
-            const transaction = db.transaction(["scores"], "readonly");
-            const store = transaction.objectStore("scores");
-            const getRequest = store.get(1);
+    async function incrementScore() {
+      score += clickBonus + 1;
+      document.getElementById('score').textContent = score;
+    }
 
-            getRequest.onsuccess = function () {
-                if (getRequest.result) {
-                    score = getRequest.result.score || 0;
-                    clickBonus = getRequest.result.clickBonus || 1;
-                    updateScoreDisplay();
-                }
-            };
+    function toggleGUI(guiId) {
+      const gui = document.getElementById(guiId);
+      const dimBackground = document.getElementById('dimBackground');
+      const isVisible = gui.style.display === 'block';
 
-            getRequest.onerror = function () {
-                console.error("Error loading progress.");
-            };
-        };
+      document.querySelectorAll('.gui').forEach(gui => gui.style.display = 'none');
+      dimBackground.style.display = 'none';
 
-        dbRequest.onerror = function () {
-            console.error("Error opening database.");
-        };
+      if (!isVisible) {
+        gui.style.display = 'block';
+        dimBackground.style.display = 'block';
+      }
+    }
 
-        // Save progress to IndexedDB
-        function saveProgress() {
-            const db = dbRequest.result;
+    async function initialize() {
+      const db = await openDatabase();
+      const transaction = db.transaction('scores', 'readonly');
+      const store = transaction.objectStore('scores');
+      const request = store.get(1);
 
-            if (db) {
-                const transaction = db.transaction(["scores"], "readwrite");
-                const store = transaction.objectStore("scores");
-
-                const saveRequest = store.put({ id: 1, score: score, clickBonus: clickBonus });
-                saveRequest.onsuccess = function () {
-                    console.log("Progress saved.");
-                };
-
-                saveRequest.onerror = function () {
-                    console.error("Error saving progress.");
-                };
-            }
+      request.onsuccess = () => {
+        if (request.result) {
+          score = request.result.value || 0;
+          document.getElementById('score').textContent = score;
         }
+      };
+    }
 
-        // Reset progress function
-        function resetProgress() {
-            const db = dbRequest.result;
-
-            if (db) {
-                const transaction = db.transaction(["scores"], "readwrite");
-                const store = transaction.objectStore("scores");
-
-                const clearRequest = store.clear();
-                clearRequest.onsuccess = function () {
-                    console.log("Progress reset successfully!");
-                    score = 0; // Reset the score in memory
-                    clickBonus = 1; // Reset click bonus
-                    updateScoreDisplay();
-                };
-
-                clearRequest.onerror = function () {
-                    console.error("Error resetting progress.");
-                };
-            }
-        }
-    </script>
+    initialize();
+  </script>
 </body>
 </html>
